<resources>
    <string name="app_name">DennysClone</string>
    <string name="home">ホーム</string>
    <string name="menu">メニュー</string>
    <string name="coupon">クーポン</string>
    <string name="net_service">ネットサービス</string>
    <string name="navi">ナビ</string>
    <string name="default_font_family">sans-serif-light</string>

    <string name="news">お知らせ</string>
    <string name="pull_label">画面を引っ張って</string>
    <string name="refresh_label">読み込み中</string>
    <string name="release_label">読み込み完了</string>

    <string name="coupon_hint_message">お会計時に「クーポンを使う」ボタンで開封し、画面を店員にご提示ください。</string>
    <string name="coupon_update">更新</string>
    <string name="coupon_using_caution">ご利用上のご注意</string>
    <string name="coupon_buy">クーポンを使う</string>
    <string name="coupon_alert">掲載期間 2016年03月08日 06時59分</string>

    <string name="user">マイページ</string>
    <string name="map">店舗検索</string>

    <string name="text_link_login"><u>パスワードを忘れた方はこちら</u></string>
    <string name="login_copyright">COPYRIGHT \u00a9 Seven &amp; i Food Systems co.,Ltd. \n All Right reserved</string>

    <string name="google_maps_api_key">AIzaSyBFVEr3kESvLZfsDV65RjGWwb72_rJdLqE</string>
</resources>
