<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/coupon_hind_message"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDarkTransparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_default_padding"
        android:paddingTop="@dimen/activity_default_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="0.2"
            android:textSize="@dimen/hint_coupon_textview"
            android:background="@android:color/transparent"
            android:text="@string/coupon_hint_message"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="0.8"
            android:background="@drawable/button_red_background"
            android:padding="@dimen/activity_default_padding"
            android:text="@string/coupon_update"
            android:textSize="@dimen/hint_coupon_textview"
            android:textColor="#fff"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2">

        <ImageView
            android:id="@+id/coupon_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/caution_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_default_padding"
                android:layout_marginRight="@dimen/activity_default_padding"
                android:layout_weight="1"
                android:background="@drawable/button_white_background"
                android:gravity="center"
                android:text="@string/coupon_using_caution"/>

            <Button
                android:id="@+id/buy_coupon_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_default_padding"
                android:layout_marginRight="@dimen/activity_default_padding"
                android:layout_weight="1"
                android:background="@drawable/button_red_background"
                android:gravity="center"
                android:text="@string/coupon_using_caution"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/coupon_alert_message"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#fff"
        android:gravity="center"
        android:text="@string/coupon_alert"/>

</LinearLayout>