<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkTransparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@string/default_font_family"
            android:gravity="center"
            android:text="デニモバクラブ"
            android:textAllCaps="false"
            android:textColor="@color/colorTitleBar"
            android:textSize="@dimen/title_text_size"
            android:textStyle="normal"/>

        <ImageButton
            android:id="@+id/close_login"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/close"/>

        <View
            android:id="@+id/header_devider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_padding"
        android:paddingLeft="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_vertical_padding"
        android:paddingTop="@dimen/activity_horizontal_padding">

        <EditText
            android:id="@+id/account_id_textview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_height"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/login_edittext_background"
            android:gravity="center_vertical"
            android:hint="会員ID（ご登録のメールアドレス）"
            android:padding="@dimen/activity_default_padding"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/default_text_size"/>

        <EditText
            android:id="@+id/account_password_textview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_height"
            android:background="@drawable/login_edittext_background"
            android:gravity="center_vertical"
            android:hint="パスワード（半角英数字４〜１０文字）"
            android:padding="@dimen/activity_default_padding"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/default_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="@dimen/activity_vertical_padding">

            <Button
                android:layout_width="@dimen/login_button_width"
                android:layout_height="@dimen/login_edittext_height"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_red_background"
                android:gravity="center"
                android:padding="@dimen/activity_default_padding"
                android:text="新規会員登録"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/default_text_size"/>

            <Button
                android:layout_width="@dimen/login_button_width"
                android:layout_height="@dimen/login_edittext_height"
                android:background="@drawable/button_red_background"
                android:gravity="center"
                android:padding="@dimen/activity_default_padding"
                android:text="ログイン"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/default_text_size"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_link_login"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/default_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:text="※サイトのバージョンアップを行いました。お手数ですが、バージョンアップ後、初回ログイン時のみID・パスワードのご入力をお願いいたします。"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/medium_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:text="@string/login_copyright"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/medium_text_size"/>
    </LinearLayout>
</LinearLayout>